--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="avatar.png" alt="avatar" class="header__avatar" />
+      <img src="Avatar.png" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Айрат Абдуллин</h1>
       <h3 class="header__subtitle">Семь миллиардов и один кот</h3>
     </header>
