--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header class="header">
       <img src="Avatar.png" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Айрат Абдуллин</h1>
-      <h3 class="header__subtitle">Семь миллиардов и один кот</h3>
+      <h3 class="header__subtitle">Триста спорткотов</h3>
+      <p>QA </p>
     </header>
     <main>
       <section class="links">
